Fix Modal layout overlap.

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,6 +1,8 @@
 .modal {
-  width: 400px;
-  height: 400px;
+  width: 85%;
+  height: 100%;
+  max-width: 400px;
+  max-height: 400px;
   border-radius: 7px;
   border: 1px solid white;
   margin: auto;
